# content-creation-crew

./: PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
articles/: draft_Cognitive Architectures: A Novel Approach to AI.md  project_Cognitive Architectures: A Novel Approach to AI.md
data/: topics.db
src/content_creator/: __init__.py  main.py
src/content_creator/crews/: __init__.py
src/content_creator/crews/article_crew/: __init__.py  article_crew.py
src/content_creator/crews/article_crew/config/: agents.yaml  tasks.yaml
src/content_creator/crews/publish_crew/: __init__.py  publish_crew.py
src/content_creator/crews/publish_crew/config/: agents.yaml  tasks.yaml
src/content_creator/crews/research_crew/: __init__.py  research_crew.py
src/content_creator/crews/research_crew/config/: agents.yaml  tasks.yaml
src/content_creator/database/: __init__.py  topic_db.py
src/content_creator/flows/: __init__.py
src/content_creator/tools/: __init__.py  search_tools.py  storage_tools.py  web_tools.py
