[project]
name = "content_creator"
version = "0.1.0"
description = "AI Content Creator - Research AI topics and create Medium articles using CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]>=0.86.0",
    "pydantic>=2.0.0",
]

[project.scripts]
kickoff = "content_creator.main:kickoff"
plot = "content_creator.main:plot"
research = "content_creator.main:run_research"
select-topic = "content_creator.main:display_topics_and_select"
create-article = "content_creator.main:create_article"
review = "content_creator.main:review_article"
publish = "content_creator.main:publish_article"
full-workflow = "content_creator.main:full_workflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
